--- a/truining.html
+++ b/truining.html
@@ -179,6 +179,6 @@
 </footer>
 
 
-    <script src="bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap.bundle.min.js"></script>
 </body>
 </html>
